--- a/OctoPodium/Base.lproj/Main.storyboard
+++ b/OctoPodium/Base.lproj/Main.storyboard
@@ -38,44 +38,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="1" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jDn-g3-b3A">
                                 <rect key="frame" x="0.0" y="108" width="320" height="323"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LanguageCell" rowHeight="60" id="1xN-Qi-pZb" customClass="LanguageCell" customModule="OctoPodium" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="1" width="320" height="60"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1xN-Qi-pZb" id="Qdl-P5-WI9">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dA6-6L-cJl" customClass="LanguageImageView" customModule="OctoPodium" customModuleProvider="target">
-                                                    <rect key="frame" x="16" y="15" width="30" height="30"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="UUC-iW-Xxj"/>
-                                                        <constraint firstAttribute="height" constant="30" id="W6a-9o-1PF"/>
-                                                    </constraints>
-                                                </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6a9-2m-skS">
-                                                    <rect key="frame" x="61" y="19" width="251" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.33725490196078434" green="0.33725490196078434" blue="0.33725490196078434" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="6a9-2m-skS" firstAttribute="centerY" secondItem="dA6-6L-cJl" secondAttribute="centerY" id="Gdp-IS-SAf"/>
-                                                <constraint firstAttribute="trailing" secondItem="6a9-2m-skS" secondAttribute="trailing" constant="8" id="UrY-5v-hxa"/>
-                                                <constraint firstItem="dA6-6L-cJl" firstAttribute="leading" secondItem="Qdl-P5-WI9" secondAttribute="leading" constant="16" id="ZJj-YS-cT6"/>
-                                                <constraint firstItem="6a9-2m-skS" firstAttribute="leading" secondItem="dA6-6L-cJl" secondAttribute="trailing" constant="15" id="dHL-gb-Qkc"/>
-                                                <constraint firstItem="dA6-6L-cJl" firstAttribute="centerY" secondItem="Qdl-P5-WI9" secondAttribute="centerY" id="g0I-lE-7GB"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="languageImageView" destination="dA6-6L-cJl" id="AYf-Pv-iEc"/>
-                                            <outlet property="nameLabel" destination="6a9-2m-skS" id="Qp1-wK-Cf5"/>
-                                            <segue destination="BYZ-38-t0r" kind="show" identifier="GoToLanguageRankings" id="GUk-Ss-7qX"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="gza-o9-9bA" id="dPt-5m-5c0"/>
                                 </connections>
@@ -973,6 +935,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cs6-Rf-xzi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2345" y="991"/>
+        </scene>
+        <!--Languages Popover Controller-->
+        <scene sceneID="BLh-4p-7ec">
+            <objects>
+                <viewController storyboardIdentifier="LanguagesPopoverController" id="EqV-WG-Q1d" customClass="LanguagesPopoverController" customModule="OctoPodium" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jjV-NY-frP"/>
+                        <viewControllerLayoutGuide type="bottom" id="jO9-B0-eSR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uwf-9z-Nct">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BmF-Q7-aKC">
+                                <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <navigationBar key="tableFooterView" contentMode="scaleToFill" id="gaU-U4-djF">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <items>
+                                        <navigationItem title="Languages" id="nre-NK-N1q"/>
+                                    </items>
+                                </navigationBar>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="BmF-Q7-aKC" secondAttribute="trailing" id="0Af-pc-WP4"/>
+                            <constraint firstItem="BmF-Q7-aKC" firstAttribute="top" secondItem="jjV-NY-frP" secondAttribute="bottom" id="3cA-JX-ccK"/>
+                            <constraint firstItem="jO9-B0-eSR" firstAttribute="top" secondItem="BmF-Q7-aKC" secondAttribute="bottom" id="Pw0-fE-gU5"/>
+                            <constraint firstItem="BmF-Q7-aKC" firstAttribute="leading" secondItem="uwf-9z-Nct" secondAttribute="leading" id="Wjn-FX-aVm"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="languagesTable" destination="BmF-Q7-aKC" id="mUL-Ht-9vv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Smk-sk-aNU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2716" y="991"/>
         </scene>
         <!--Users-->
         <scene sceneID="Mw2-VD-RRs">
