--- a/OctoPodium/Base.lproj/Main.storyboard
+++ b/OctoPodium/Base.lproj/Main.storyboard
@@ -86,6 +86,7 @@
                         <outlet property="loadingIndicator" destination="IOW-bw-wLx" id="o0y-Nv-0nr"/>
                         <outlet property="searchBar" destination="AAR-44-pJD" id="nnm-94-zvL"/>
                         <outlet property="tryAgainButton" destination="7Le-Wb-FvH" id="LPz-x9-M2l"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="ShowUserDetailsSegueNotUsed" id="UJ2-bd-uBP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gtS-g7-kZV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -930,13 +931,14 @@
                     <connections>
                         <outlet property="loadingView" destination="IJt-Zt-Hai" id="LDY-5f-qe9"/>
                         <outlet property="webView" destination="sfu-Di-YAo" id="6sT-pG-gU4"/>
+                        <segue destination="EqV-WG-Q1d" kind="show" identifier="ShowLanguagesInPopoverSegueNotUsed" id="tbi-yR-SZX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cs6-Rf-xzi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2345" y="991"/>
         </scene>
-        <!--Languages Popover Controller-->
+        <!--Languages-->
         <scene sceneID="BLh-4p-7ec">
             <objects>
                 <viewController storyboardIdentifier="LanguagesPopoverController" id="EqV-WG-Q1d" customClass="LanguagesPopoverController" customModule="OctoPodium" customModuleProvider="target" sceneMemberID="viewController">
@@ -949,15 +951,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BmF-Q7-aKC">
-                                <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <navigationBar key="tableFooterView" contentMode="scaleToFill" id="gaU-U4-djF">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                    <items>
-                                        <navigationItem title="Languages" id="nre-NK-N1q"/>
-                                    </items>
-                                </navigationBar>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -968,6 +963,7 @@
                             <constraint firstItem="BmF-Q7-aKC" firstAttribute="leading" secondItem="uwf-9z-Nct" secondAttribute="leading" id="Wjn-FX-aVm"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Languages" id="niP-nV-1ej"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="languagesTable" destination="BmF-Q7-aKC" id="mUL-Ht-9vv"/>
